--- a/docs/issues/2024-05.rst
+++ b/docs/issues/2024-05.rst
@@ -6,11 +6,11 @@ Featured
 `Improving Detection in Aerial Images by Capturing Inter-Object Relationships <https://arxiv.org/pdf/2404.04140.pdf>`_
     Objects tend to be spatially corrected, but existing overhead ATR methods don't take this into account.  This paper does so by putting a transfomer on top of traditional two-stage detectors to examine regions of interest.  We though about implementing something like this for MAGI, but never did.  A cool idea to keep in our back pocket, especially if we can adapt it to non-overhead areas.
 
-`KGExplainer: Towards Exploring Connected Subgraph Explanations for Knowledge Graph Completion <https://arxiv.org/pdf/2404.03893.pdf>`_
-    From Amazon.  Proposes a method to explain knowledge graph completions done with knowledge graph embeddings by investigating connected subgraphs.  Makes intuitive sense and seems to improve performance in practice.  
+`Alpaca against Vicuna: Using LLMs to Uncover Memorization of LLMs <https://arxiv.org/pdf/2403.04801.pdf>`_
+    Instead of trying to prompt an LLM to recover something about it (in this case whether/how much training data it has memorized) you can have another LLM attack it instead.  Could probably expand this methodology to other vectors.
 
-`No “Zero-Shot” Without Exponential Data: Pretraining Concept Frequency Determines Multimodal Model Performance <https://arxiv.org/pdf/2404.04125.pdf>`_
-    From Deepmind (and friends).  Zero-shot models like CLIP aren't really zero-shot - their performance instead requires exponentially more data to get linear performance increases.  Obvious implication is that these models aren't actually zero-shot and instead depend on just having oodles of training data, which makes sense intuitively.  
+`Variational Stochastic Gradient Descent for Deep Neural Networks <https://arxiv.org/pdf/2404.06549.pdf>`_
+    New method for gradient descent, Variational Stochastic Gradient Descent, which outperforms both ADAM and regular SGD on the examples in the paper (both image classification).  They make VSGD by forming a probabilistic model of gradient descent and use stochastic variational inference to find updates.  Apparently VSGD is a generalization of other methods such as SGD and ADAM?
 
 `Is Model Collapse Inevitable? Breaking the Curse of Recursion by Accumulating Real and Synthetic Data <https://arxiv.org/pdf/2404.01413.pdf>`_
     Generative models trained on their own outputs tend to collapse.  Part of the reason we thought this was because new generated data was replacing old real data - if you accumulate data instead, and supplement the old data with generated data rather than substitute it, than model collapse does not occur.  There's still some error, I think - it's just bounded above instead of going to infinity.
@@ -41,6 +41,9 @@ LLMs
 
 `Elephants Never Forget: Memorization and Learning of Tabular Data in Large Language Models <https://arxiv.org/pdf/2404.06209.pdf>`_
     From Microsoft.  LLMs have  tendency to memorize tabular training data wholesale, but still perform decently well in zero/few shot environments.  
+
+`Alpaca against Vicuna: Using LLMs to Uncover Memorization of LLMs <https://arxiv.org/pdf/2403.04801.pdf>`_
+    Instead of trying to prompt an LLM to recover something about it (in this case whether/how much training data it has memorized) you can have another LLM attack it instead.  Could probably expand this methodology to other vectors.
 
 VLMs
 ----
@@ -84,6 +87,9 @@ Theory
 `No “Zero-Shot” Without Exponential Data: Pretraining Concept Frequency Determines Multimodal Model Performance <https://arxiv.org/pdf/2404.04125.pdf>`_
     From Deepmind (and friends).  Zero-shot models like CLIP aren't really zero-shot - their performance instead requires exponentially more data to get linear performance increases.  Obvious implication is that these models aren't actually zero-shot and instead depend on just having oodles of training data, which makes sense intuitively.  
 
+`Variational Stochastic Gradient Descent for Deep Neural Networks <https://arxiv.org/pdf/2404.06549.pdf>`_
+    New method for gradient descent, Variational Stochastic Gradient Descent, which outperforms both ADAM and regular SGD on the examples in the paper (both image classification).  They make VSGD by forming a probabilistic model of gradient descent and use stochastic variational inference to find updates.  Apparently VSGD is a generalization of other methods such as SGD and ADAM?
+
 Stats
 -----
 `On the Learnability of Out-of-distribution Detection <https://arxiv.org/pdf/2404.04865.pdf>`_
@@ -111,16 +117,13 @@ Applications
 `Protection of Guizhou Miao Batik Culture Based on Knowledge Graph and Deep Learning <https://arxiv.org/ftp/arxiv/papers/2404/2404.06168.pdf>`_
     Duct-tapes LLMs, knowledge graphs, and CNNs together to record/understand batik, a type of fabric produced by the Miao in Guanzhou, China.  Uses the LLM to encode the knowledge graph, and can upload a particular batik using a CNN to understand the cultural context.  Sort of just a really fancy databse?
 
-Computer Science
-----------------
+`DIFFOBS: GENERATIVE DIFFUSION FOR GLOBAL FORECASTING OF SATELLITE OBSERVATIONS <https://arxiv.org/pdf/2404.06517.pdf>`_
+    From NVIDIA.  Trains a generative diffusion model to predict daily precipitation (some sort of spatio-temporal structure under the hood?) global satellite estimates.  Good for a few-months-ahead estimation despite only trying to do one day ahead.
 
-
-Data Labelling
---------------
-
-
-Logistics/Operations Research
------------------------------
+FPGA
+----
+`GCV-Turbo: End-to-end Acceleration of GNN-based Computer Vision Tasks on FPGA <https://arxiv.org/pdf/2404.07188.pdf>`_
+    From DEVCOM Army Research Office.  Putting CNNS and GNNs for CV on FPGAs.  
 
 
 Reasoning/Knowledge Graphs
@@ -133,6 +136,3 @@ Reasoning/Knowledge Graphs
 
 `KGExplainer: Towards Exploring Connected Subgraph Explanations for Knowledge Graph Completion <https://arxiv.org/pdf/2404.03893.pdf>`_
     From Amazon.  Proposes a method to explain knowledge graph completions done with knowledge graph embeddings by investigating connected subgraphs.  Makes intuitive sense and seems to improve performance in practice.  
-
-Datasets
---------
